Sat Jul 21 20:22:26 2001                        Michael Jennings (mej)

Although I have yet to be able to reproduce it, I believe this will
fix Debian bug #104393.  I don't think the lower parts of that array
were getting properly zeroed. :(
----------------------------------------------------------------------
Mon Jul 23 11:05:45 2001                        Michael Jennings (mej)

Well that was dumb.  PNG backgrounds which were tiled rather than
scaled would end up nuking most of the window.  Fixed now.
----------------------------------------------------------------------
Mon Jul 23 17:59:18 2001                        Michael Jennings (mej)

Fixed the problem where the wrong font would end up in your menus and
buttonbars if you enable multibyte support but don't have a specific
encoding in use.  I also corrected a large number of misplaced
newlines in error messages; I think that was some Perl-fu gone awry.
----------------------------------------------------------------------
Sun Aug  5 01:52:51 2001                        Michael Jennings (mej)

Okay, first off, I finally found and fixed a typo with regard to the
utempter support on RedHat-based systems.  I doubt it's ever worked
properly (sigh).  Secondly, I added support for throwing Eterm's
termcap entry into the termcap DB on FreeBSD (and possibly other
*BSD-based) systems thanks to info from Kirby Kuehl
<vacuum@technotronic.com>.  And finally, added in a patch from Paul
Brannan <pbranna@clemson.edu> to support some additional escape
sequences for vim.
----------------------------------------------------------------------
Sun Aug  5 10:21:16 2001                        Michael Jennings (mej)

FreeBSD fix, take 2.
----------------------------------------------------------------------
Sun Aug  5 16:15:34 2001                        Michael Jennings (mej)

fvwm color thingie patch from Eric West <ericwest@asicaction.com>.
----------------------------------------------------------------------