@@ -62,3 +62,11 @@ rather than with the Eterm distribution.
 
 Neopolis-horizon.jpg		Joe Colburn <joe@nodomain.com>
 cyber_bg.jpg			Joe Colburn <joe@nodomain.com>
+bubbly1.jpg                     Tal Danzig <tal@libranet.com>
+bubbly2.jpg                     Tal Danzig <tal@libranet.com>
+bubbly3.jpg                     Tal Danzig <tal@libranet.com>
+bubbly4.jpg                     Tal Danzig <tal@libranet.com>
+confusion.jpg                   Tal Danzig <tal@libranet.com>
+egg.jpg                         Tal Danzig <tal@libranet.com>
+steel1.jpg                      Tal Danzig <tal@libranet.com>
+twisted.jpg                     Tal Danzig <tal@libranet.com>
