@@ -1,9 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
-<HTML>
-<!--#set var="PAGE_TITLE" value="Eterm Technical Reference" -->
-<!--#include virtual="/header.html" -->
-
-<H1><!--#echo var="PAGE_TITLE" --></H1>
+<H1>Eterm Technical Reference</H1>
 
 <P>
 This document covers the technical aspects of Eterm, including escape sequences
